--- a/telegram-bot/src/main/resources/application.properties
+++ b/telegram-bot/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/????
+spring.datasource.username=???
+spring.datasource.password=???
+telegram.bot.token= ????
+spring.jpa.show-sql=true
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.jpa.open-in-view=false
