--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -46,10 +46,10 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.liquibase</groupId>
-			<artifactId>liquibase-core</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.liquibase</groupId>-->
+<!--			<artifactId>liquibase-core</artifactId>-->
+<!--		</dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
