--- a/telegram-bot/src/main/resources/application.properties
+++ b/telegram-bot/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=
 spring.datasource.password=
 telegram.bot.token=
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
-spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-spring.jpa.open-in-view=false
+
+#spring.jpa.show-sql=true
+#spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+#spring.jpa.open-in-view=false
