--- a/telegram-bot/src/main/resources/application.properties
+++ b/telegram-bot/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/user16
+spring.datasource.username=user16
+spring.datasource.password=user16
+telegram.bot.token= 6530370056:AAEBu9_YasLhwSa5PyKYplAiIDCcgahV0-U
 
-spring.jpa.show-sql=true
-spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+#spring.jpa.show-sql=true
+#spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
 spring.jpa.open-in-view=false
+
+
+spring.jpa.hibernate.ddl-auto=update
